--- a/route-project/README
+++ b/route-project/README
@@ -1,4 +1,4 @@
-**Порядок действия:**
+# Порядок действия:
 
 1. Создать окружение `python -m venv route_venv` (рекомендуется) и запустить окружение `route_venv\Scripts\activate`
 2. Загрузить зависимости `pip install -r requirements.txt`
